--- a/csfs-research/slideshow/index.html
+++ b/csfs-research/slideshow/index.html
@@ -12,13 +12,16 @@
             <p class="profile-role">[cf researcher-profile-role]</p>
             <h3 style="margin-bottom:60px;">[cf researcher-profile-blurb]</h3>
             <p class="read-more-text-link profile-read-more">[link_with_content content="read more"]</p>
+            <p class="slide-id" style="display:none">[the_ID]</p>
           </div>
         </div>
       [/loop]
     </div>
     <div id="slideshow-dots" class="slideshow-dots">
       [loop query="posts_per_page=11&amp;category_name=Researcher Profiles"]
-        <span class="dot"></span>
+        <div class="dot">
+          <p class="slide-id" style="display:none">[the_ID]</p>
+        </div>
       [/loop]
     </div>
   </div>
